--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://bellachen00.github.io",
+  "homepage": "https://bellachen00.github.io/bellachen00.github.io/public/index.html",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
